cli/tests/ui/binding_mixed_dot_form_to.stderr
Error: manifest::mixed_binding_form

  × check failed
  ╰─▶ binding mixes dot form with `slot`/`capability`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/binding_mixed_dot_form_to.json5:4:11]
 3 │   bindings: [
 4 │     { to: "self.s", slot: "s", from: "self", capability: "p" },
   ·           ────┬───
   ·               ╰── dot form here
 5 │   ],
   ╰────
  help: Use either dot form or explicit `slot`/`capability` fields.
